Done the fix drag&drop row error(Moonshine-IDE/Moonshine-IDE#1016)

--- a/src/components/renderers/DominoViewEditorHeaderRenderer.mxml
+++ b/src/components/renderers/DominoViewEditorHeaderRenderer.mxml
@@ -45,6 +45,7 @@
                 textAlign="left"
                 fontWeight="bold"
                 showTruncationTip="true"
+                backgroundAlpha="100"
                 />
 	</fx:Declarations>
 
