--- a/src/view/domino/propertyEditors/DominoViewPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/DominoViewPropertyEditor.mxml
@@ -39,7 +39,7 @@
     creationComplete="onCreationComplete(event)"
     top="10" includeInLayout="false" visible="false">
 								<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
-									<s:Label text="Viwe Name:" width="100%" />
+									<s:Label text="View Name:" width="100%" />
 									 <s:TextInput id="viewNameInput"
                                             text="{this.viewObject.viewName}"  width="100" maxChars="100" 
 											editable="false"
