--- a/src/view/domino/forms/MultipleCheckboxView.mxml
+++ b/src/view/domino/forms/MultipleCheckboxView.mxml
@@ -196,7 +196,7 @@
             }
             widthOfList = widthOfContair -50;
 
-           
+           initializeMultiSelect();
 
         }
 
@@ -204,7 +204,7 @@
         private function initializeMultiSelect():void {
             
             var rex:RegExp = /[\s\r\n]+/gim;
-            if (includeCollection&& selectedColumnObject && selectedColumnObject[_textProperty]){
+            if (includeCollection&&multCheckList&& selectedColumnObject && selectedColumnObject[_textProperty]){
                  var str:String = selectedColumnObject[_textProperty];
                  if(str.length>0){
                     var _iniList:Array=str.split(" ");
